tm-core/tests/snapshots/emit_day_section__day_section_home_day.snap
---
source: tm-core/tests/emit_day_section.rs
expression: body
---
08:00  3 p3 ✓ Claude Code drafts tests     @m2  1b  (60m)
09:00  ·    ✓ break 20m                             (20m)
09:20  3 p3 ▶ Review the drafts            @m2  1b
10:20  3 p1   Exercises 5.3–5.5            @m1  2b
11:30  ·      lunch 30m
12:00  2 p3   batch: Insura… · Call… (2)        50m
13:00  3 p1   Read ch.6 §1–2               @m3  1b
14:00  ·      break 20m
14:20  3 p1   Read ch.6 §3                 @m3  1b
15:20  ───    window ends 17:00
15:20  2 p0 ⚠ Pick up package                   20m     due today
17:30  ·      dinner 30m
21:30  🌙     wind-down · bed 22:00
22:00  ·      sleep 8h30m
