tm-core/tests/snapshots/emit_day_section__day_section_late_start.snap
---
source: tm-core/tests/emit_day_section.rs
expression: body
---
09:00  ⏰     Dentist                           1h20m
10:20  ·      lost 10m                                 leak
10:30  5 p1 ✓ Read ch.6 §1–2               @m3  1b  (60m)
11:30  ·      lunch 30m
12:00  4 p1 ▶ Exercises 5.3–5.5            @m1  2b
12:50  ⏰     Meeting w/ host                   1h
13:50  ·      break 20m
14:10  5↓p3   Claude Code drafts tests     @m2  1b     ↓ slot 5, item 3
15:30  3 p3   Review the drafts            @m2  1b
16:30  ───    window ends 18:30
16:30  1 p0 ⚠ Pick up package                   20m     due today
17:30  ·      dinner 30m
19:00  ○      Severance S3E4                    1h
21:30  🌙     wind-down · bed 22:00
