tm-core/tests/snapshots/emit_day_section__day_section_log_faithful.snap
---
source: tm-core/tests/emit_day_section.rs
expression: body
---
07:02  5 p1 ✓ Read ch.6 §1–2               @m3  1b  (67m)
08:09  5 p1 ✓ Read ch.6 §3                 @m3  1b  (58m)
09:08  ·    ✓ break 20m                             (24m)
09:32  4 p1 ▶ Exercises 5.3–5.5            @m1  2b×1.6
11:20  ·      lunch 30m
11:50  4↓p3   Claude Code drafts tests     @m2  1b     ↓ slot 4, item 3
12:50  ⏰     Meeting w/ host                   1h
13:50  ·      break 20m
14:10  3 p3   Review the drafts            @m2  1b
15:10  1 p0 ⚠ Pick up package                   20m     due today
15:30  ───    window ends 16:00
17:30  ·      dinner 30m
18:00  ○      Severance S3E4                    1h
21:30  🌙     wind-down · bed 22:00
