tm-core/tests/snapshots/emit_day_section__day_section_narrow.snap
---
source: tm-core/tests/emit_day_section.rs
expression: body
---
07:00  5 p1 ✓ Read ch.6 §…  @m3  1b  (67m)
08:00  5 p1 ✓ Read ch.6 §3  @m3  1b  (58m)
09:00  ·    ✓ break 20m              (24m)
09:20  4 p1 ▶ Exercises 5…  @m1  2b×1.6
11:20  ·      lunch 30m
11:50  4↓p3   Claude Code…  @m2  1b     ↓ slot 4, item 3
12:50  ⏰     Meeting w/…        1h
13:50  ·      break 20m
14:10  3 p3   Review the…   @m2  1b
15:10  ───    window ends 16:00
15:10  1 p0 ⚠ Pick up pac…       20m     due today
17:30  ·      dinner 30m
18:00  ○      Severance S…       1h
21:30  🌙     wind-down ·…
